fixes hover inconsistency in the palette modal due to the sprite adds dark mode using css variables

--- a/src/components/Pokecard/Pokecard.css
+++ b/src/components/Pokecard/Pokecard.css
@@ -2,7 +2,9 @@
     display: flex;
     height: 100%;
     width: 100%;
-    transition: all 1s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: var(--background-color);
+    color: var(--pokemon-entry-color);
 }
 
 .pokeImage{
@@ -64,7 +66,7 @@ ul{
     flex: 0 0 1;
     overflow-y:auto;
     scrollbar-width: none;
-    border: 8px solid rgb(248, 248, 129);
+    border: 8px solid var(--menu-color);
     padding: 8px;
     border-radius: 19px;    
 }
@@ -74,18 +76,21 @@ ul{
     justify-content: center;
     margin: 2px;
     padding: 4px;
-    border: 2px solid;  
+    border: 2px solid #000000;  
     border-radius: 10px;
     font-weight: bolder;
-    background-color: #e2e2e2;
+    background-color: var(--secondary-bg-color);
     font-family: "VT323", monospace;
     font-size: 1.2rem;
+    color: var(--options-color);
 }
     
 .moveButton:hover{
-    background-color: rgb(233, 119, 119);
+    background-color: var(--button-secondary-bg);
+    border: 2px solid var(--button-secondary-border);
+    color: white;
     transform: scale(1.023) translateY(-1.6px);
-    transition: all 0.2s ease-in;
+    transition: all 0.3s ease-in;
 }
 
 .stats,.abilites{
