--- a/src/components/paletteModal/ViewPalette.css
+++ b/src/components/paletteModal/ViewPalette.css
@@ -31,24 +31,24 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    pointer-events: none;
 }
 
 .colorCopyBtn{
     display: flex;
-    align-items: start;
-    justify-content: center;
+    flex-direction: column;
+    align-items:center;
+    justify-content: start;
     border: none;
     background:rgb(0,0,0, 0);
     font-family:"VT323", monospace;
     color: rgb(0,0,0, 0);
     font-size:20px;
     margin-top: 20px;
-    font-weight:400;
     height: 100%;
     width: 100%;
     cursor: pointer;
     font-weight: bold;
-    vertical-align: top;
     opacity: 0;
     transition: ease-in 0.1s all;
 }
