--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,42 @@
+:root{
+    --background-color:#FFFFFF;
+    --menu-color:#FFDE00;
+    --secondary-bg-color:#f4edbc;
+
+    --button-primary-bg: #4354e6;
+    --button-primary-hover:#b1b8f9;
+    --button-primary-border:#7a87f9;
+
+    --button-secondary-bg:#CC0000;
+    --button-secondary-hover:#ffb3b3;
+    --button-secondary-border:#f96e6e;
+
+    --options-color: #000000;
+    --pokemon-entry-color:#000000;
+    
+}
+
+body{
+    transition: all 1s ease-in-out;
+}
+
+body.darkmode{
+    --background-color:#242424;
+    --menu-color:#404040;
+    --secondary-bg-color:#50504fc0;
+
+    --button-primary-bg: #CC0000;
+    --button-primary-hover:#f16d6d86;
+    --button-primary-border:#f96e6e;
+
+    --button-secondary-bg:#4354e6;
+    --button-secondary-hover:#b1b8f9;
+    --button-secondary-border:#7a87f9;
+
+    --options-color: #ffffff;
+    --pokemon-entry-color:#ffffff;
+}
+
 *{
     box-sizing: border-box;
 }
